added courses controllers + uses local db (not persisted)

--- a/FunnyVersityDeluxe/appsettings.json
+++ b/FunnyVersityDeluxe/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "FunnyVersityDeluxeContext": "Server=(localdb)\\mssqllocaldb;Database=FunnyVersityDeluxeContext-dd39c73d-8fbd-493b-87e4-0dd4f9f4f64e;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
