--- a/FVD.Tests/FVD.Tests.csproj
+++ b/FVD.Tests/FVD.Tests.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\FunnyVersityDeluxe\FunnyVersityDeluxe.API.csproj" />
     <ProjectReference Include="..\FVD.Services\FVD.Services.csproj" />
   </ItemGroup>
 
