added security => not working 401 unauthorised

--- a/FVD.Services/FVD.Services.csproj
+++ b/FVD.Services/FVD.Services.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\FVD.Data\FVD.Data.csproj" />
     <ProjectReference Include="..\FVD.Domain\FVD.Domain.csproj" />
   </ItemGroup>
 
